@@ -13,76 +13,66 @@ import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Test;
 
-public class FormatterTest {
+class FormatterTest {
 
     @Test
-    public void testDefaultPreferences() throws Exception {
+    void testDefaultPreferences() throws Exception {
         XmlDocumentFormatter formatter = new XmlDocumentFormatter(System.lineSeparator(), new FormattingPreferences());
 
-        String inXml = new String(Files.readAllBytes(Paths.get("src/test/resources/test-input.xml")),
-                StandardCharsets.UTF_8);
+        String inXml = Files.readString(Paths.get("src/test/resources/test-input.xml"));
         String outXml = formatter.format(inXml);
 
-        assertEquals(outXml, new String(Files.readAllBytes(Paths.get("src/test/resources/default-output.xml")),
-                StandardCharsets.UTF_8));
+        assertEquals(outXml, Files.readString(Paths.get("src/test/resources/default-output.xml")));
     }
 
     @Test
-    public void testMultiLinedAttrs() throws Exception {
+    void testMultiLinedAttrs() throws Exception {
         FormattingPreferences prefs = new FormattingPreferences();
         prefs.setSplitMultiAttrs(true);
         XmlDocumentFormatter formatter = new XmlDocumentFormatter(System.lineSeparator(), prefs);
 
-        String inXml = new String(Files.readAllBytes(Paths.get("src/test/resources/test-input.xml")),
-                StandardCharsets.UTF_8);
+        String inXml = Files.readString(Paths.get("src/test/resources/test-input.xml"));
         String outXml = formatter.format(inXml);
 
-        assertEquals(outXml,
-                new String(Files.readAllBytes(Paths.get("src/test/resources/multi-lined-attrs-output.xml")),
-                        StandardCharsets.UTF_8));
+        assertEquals(outXml, Files.readString(Paths.get("src/test/resources/multi-lined-attrs-output.xml")));
     }
 
     @Test
-    public void testNoWrapTags() throws Exception {
+    void testNoWrapTags() throws Exception {
         FormattingPreferences prefs = new FormattingPreferences();
         prefs.setWrapLongLines(false);
         XmlDocumentFormatter formatter = new XmlDocumentFormatter(System.lineSeparator(), prefs);
 
-        String inXml = new String(Files.readAllBytes(Paths.get("src/test/resources/test-input.xml")),
-                StandardCharsets.UTF_8);
+        String inXml = Files.readString(Paths.get("src/test/resources/test-input.xml"));
         String outXml = formatter.format(inXml);
 
-        assertEquals(outXml, new String(Files.readAllBytes(Paths.get("src/test/resources/no-wrap-tags-output.xml")),
-                StandardCharsets.UTF_8));
+        assertEquals(outXml, Files.readString(Paths.get("src/test/resources/no-wrap-tags-output.xml")));
     }
 
     @Test
-    public void testMalformedCaught() throws Exception {
+    void testMalformedCaught() throws Exception {
         FormattingPreferences prefs = new FormattingPreferences();
         prefs.setWellFormedValidation(FormattingPreferences.FAIL);
         XmlDocumentFormatter formatter = new XmlDocumentFormatter(System.lineSeparator(), prefs);
-        String inXml = new String(Files.readAllBytes(Paths.get("src/test/resources/malformed.xml")),
-                StandardCharsets.UTF_8);
+        String inXml = Files.readString(Paths.get("src/test/resources/malformed.xml"));
 
         assertThrows(IllegalArgumentException.class, () -> formatter.format(inXml));
     }
 
     @Test
-    public void testIndentationReset() throws Exception {
+    void testIndentationReset() throws Exception {
         // reusing a formatter on a malformed xml document without a balanced pair of end tags should
         // not interfere with the formatter's indentation of subsequent files
         FormattingPreferences prefs = new FormattingPreferences();
         prefs.setWellFormedValidation(FormattingPreferences.IGNORE);
         XmlDocumentFormatter formatter = new XmlDocumentFormatter(System.lineSeparator(), prefs);
         // this file contains an opening tag, but not a corresponding closing tag
-        String inXml = new String(Files.readAllBytes(Paths.get("src/test/resources/malformed.xml")),
-                StandardCharsets.UTF_8);
+        String inXml = Files.readString(Paths.get("src/test/resources/malformed.xml"));
         // format the malformed file once and ignore any errors
         String outXml = formatter.format(inXml);
         // format the malformed file a second time and ignore any errors
@@ -92,30 +82,27 @@ public class FormatterTest {
     }
 
     @Test
-    public void testNoRootElement() throws Exception {
+    void testNoRootElement() throws Exception {
         XmlDocumentFormatter formatter = new XmlDocumentFormatter(System.lineSeparator(), new FormattingPreferences());
-        String inXml = new String(Files.readAllBytes(Paths.get("src/test/resources/sample-orca5-deps.xml")),
-                StandardCharsets.UTF_8);
+        String inXml = Files.readString(Paths.get("src/test/resources/sample-orca5-deps.xml"));
 
         assertDoesNotThrow(() -> formatter.format(inXml));
     }
 
     @Test
-    public void testNoRootElementFails() throws Exception {
+    void testNoRootElementFails() throws Exception {
         FormattingPreferences prefs = new FormattingPreferences();
         prefs.setWellFormedValidation(FormattingPreferences.FAIL);
         XmlDocumentFormatter formatter = new XmlDocumentFormatter(System.lineSeparator(), prefs);
-        String inXml = new String(Files.readAllBytes(Paths.get("src/test/resources/sample-orca5-deps.xml")),
-                StandardCharsets.UTF_8);
+        String inXml = Files.readString(Paths.get("src/test/resources/sample-orca5-deps.xml"));
 
         assertThrows(IllegalArgumentException.class, () -> formatter.format(inXml));
     }
 
     @Test
-    public void testNoDtdValidation() throws Exception {
+    void testNoDtdValidation() throws Exception {
         XmlDocumentFormatter formatter = new XmlDocumentFormatter(System.lineSeparator(), new FormattingPreferences());
-        String inXml = new String(Files.readAllBytes(Paths.get("src/test/resources/dtd-test-input.xml")),
-                StandardCharsets.UTF_8);
+        String inXml = Files.readString(Paths.get("src/test/resources/dtd-test-input.xml"));
 
         assertDoesNotThrow(() -> formatter.format(inXml));
     }
